Remove redundant tests